2014-10-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* epg.el: Use cl-defstruct.
	(epg-make-data-from-file, epg-make-data-from-string, epg-data-file)
	(epg-data-string): Define via cl-defstruct.
	(epg--gv-nreverse): New macro.
	(epg-context--make): New constructor (provided vi cl-defstruct).
	(epg-make-context): Rewrite using it.
	(epg-context-protocol, epg-context-program)
	(epg-context-home-directory, epg-context-armor, epg-context-textmode)
	(epg-context-include-certs, epg-context-cipher-algorithm)
	(epg-context-digest-algorithm, epg-context-compress-algorithm)
	(epg-context-passphrase-callback, epg-context-progress-callback)
	(epg-context-signers, epg-context-sig-notations, epg-context-process)
	(epg-context-output-file, epg-context-result, epg-context-operation)
	(epg-context-pinentry-mode): Define using cl-defstruct.
	(epg-context-set-protocol, epg-context-set-program)
	(epg-context-set-include-certs, epg-context-set-cipher-algorithm)
	(epg-context-set-digest-algorithm)
	(epg-context-set-sig-notations, epg-context-set-process)
	(epg-context-set-output-file, epg-context-set-result)
	(epg-context-set-operation, epg-context-set-pinentry-mode)
	(epg-context-set-compress-algorithm): Remove.  Use setf instead.
	(epg-context-set-armor, epg-context-set-textmode)
	(epg-context-set-signers): Redefine using setf
	and declare as obsolete.
	(epg-context-set-passphrase-callback)
	(epg-context-set-progress-callback): Use setf.
	(epg-signature-notations): Rename from epg-sig-notations.
	(epg-make-signature, epg-signature-status, epg-signature-key-id)
	(epg-signature-validity, epg-signature-fingerprint)
	(epg-signature-creation-time, epg-signature-expiration-time)
	(epg-signature-pubkey-algorithm, epg-signature-digest-algorithm)
	(epg-signature-class, epg-signature-version): Define vi cl-defstruct.
	(epg-signature-set-status, epg-signature-set-key-id)
	(epg-signature-set-validity, epg-signature-set-fingerprint)